--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-bootstrap": "1.3.0",
     "react-dom": "16.13.1",
     "react-hook-form": "^6.8.2",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "semiotic": "^1.20.5"
   },
   "devDependencies": {
     "typescript": "3.3.3"
