--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@nivo/line": "^0.62.0",
     "bootstrap": "4.5.2",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
