--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "1.3.0",
     "react-dom": "16.13.1",
     "react-hook-form": "^6.8.2",
+    "react-json-view": "^1.19.1",
     "react-scripts": "3.4.3",
     "semiotic": "^1.20.5",
     "use-http": "^1.0.15"
